darken  to avoid contrast warning

--- a/app/styles/labs-ui/variables.scss
+++ b/app/styles/labs-ui/variables.scss
@@ -27,7 +27,7 @@ $gold: #edbd12;
 $gold-light: #ffeeb3;
 $gold-dark: #7a6000;
 $gold-muted: #b4a364;
-$orange: #ed7d12;
+$orange: #e2750f;
 $orange-light: #ffd8b3;
 $orange-dark: #7a3c00;
 $orange-muted: #b48b64;
